<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_standard"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_detail_wisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_standard"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/title_hint"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/location_detail_wisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/location_hint" />

        <TextView
            android:id="@+id/category_detail_wisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/margin_standard"
            android:text="@string/category_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Deskripsi"
            android:fontFamily="sans-serif-condensed"
            android:textSize="25sp"
            android:layout_margin="@dimen/margin_standard"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/description_detail_wisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_hint"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"/>
    </LinearLayout>
</android.support.v7.widget.CardView>