<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/image_from_gallery"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@color/abuAbuImageHolder"/>
        <EditText
            android:id="@+id/deskripsi_upload"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            android:hint="@string/description_hint_upload"
            android:gravity="top"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="1000"
            android:maxLines="4"/>
    </LinearLayout>
    <EditText
        android:id="@+id/upload_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_upload"
        android:layout_margin="@dimen/margin_standard"/>
    <EditText
        android:id="@+id/upload_lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_hint"
        android:layout_margin="@dimen/margin_standard"/>
    <Button
        android:id="@+id/button_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upload"
        android:textColor="@android:color/white"
        android:background="@color/blue"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_gravity="bottom|end"/>
</LinearLayout>